<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/button_error_toast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/error_toast" />

        <Button
            android:id="@+id/button_success_toast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/button_error_toast"
            android:text="@string/success_toast" />

        <Button
            android:id="@+id/button_info_toast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/button_success_toast"
            android:text="@string/info_toast" />

        <Button
            android:id="@+id/button_info_toast_with_formatting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/button_info_toast"
            android:text="@string/info_toast_with_formatting" />

        <Button
            android:id="@+id/button_warning_toast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/button_info_toast_with_formatting"
            android:text="@string/warning_toast" />

        <Button
            android:id="@+id/button_normal_toast_wo_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/button_warning_toast"
            android:text="@string/normal_toast_without_icon" />

        <Button
            android:id="@+id/button_normal_toast_w_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/button_normal_toast_wo_icon"
            android:text="@string/normal_toast_with_icon" />

        <Button
            android:id="@+id/button_custom_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/button_normal_toast_w_icon"
            android:text="@string/custom_configuration" />

        <android.support.v7.widget.CardView
            android:id="@+id/card_container"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/button_custom_config"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            app:cardBackgroundColor="#CCFFFFFF"
            app:cardCornerRadius="100dp"
            app:cardElevation="20dp"
            app:cardMaxElevation="0dp">

            <com.example.p005_toastutils.RoundImageView
                android:id="@+id/iv_avatar"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/icon"
                app:riv_corner_radius="300dp" />
        </android.support.v7.widget.CardView>

        <com.example.p005_toastutils.CustomImageView
            android:id="@+id/iv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/card_container"
            android:layout_margin="10dp"
            app:src="@drawable/icon"
            app:type="circle" />

    </RelativeLayout>
</ScrollView>
